RR-385 - Add correlationId to TimelineEvent (#114)
* RR-385 - Add correlationId to TimelineEvent

* RR-385 - Add GOAL_CREATED timeline events when creating an ActionPlan

* RR-385 - Make correlationId mandatory

* RR-385 - Minor fixes
