# domain/timeline/src/testFixtures/kotlin/uk/gov/justice/digital/hmpps/educationandworkplanapi/domain/timeline/TimeLineBuilder.kt
@@ -22,6 +22,7 @@ fun aValidTimelineEvent(
   actionedBy: String = "asmith_gen",
   actionedByDisplayName: String = "Alex Smith",
   timestamp: Instant = Instant.now(),
+  correlationId: UUID = UUID.randomUUID(),
 ) = TimelineEvent(
   reference = reference,
   sourceReference = sourceReference,
@@ -31,4 +32,5 @@ fun aValidTimelineEvent(
   actionedBy = actionedBy,
   actionedByDisplayName = actionedByDisplayName,
   timestamp = timestamp,
+  correlationId = correlationId,
 )
