# src/testFixtures/kotlin/uk/gov/justice/digital/hmpps/educationandworkplanapi/app/database/jpa/entity/TimelineEventEntityBuilder.kt
@@ -14,6 +14,7 @@ fun aValidTimelineEventEntity(
   actionedByDisplayName: String? = "Alex Smith",
   timestamp: Instant = Instant.now(),
   createdAt: Instant = Instant.now(),
+  correlationId: UUID = UUID.randomUUID(),
 ) = TimelineEventEntity(
   id = id,
   reference = reference,
@@ -25,4 +26,5 @@ fun aValidTimelineEventEntity(
   actionedByDisplayName = actionedByDisplayName,
   timestamp = timestamp,
   createdAt = createdAt,
+  correlationId = correlationId,
 )
