# src/testFixtures/kotlin/uk/gov/justice/digital/hmpps/educationandworkplanapi/resource/model/TimelineEventResponseAssert.kt
@@ -93,4 +93,24 @@ class TimelineEventResponseAssert(actual: TimelineEventResponse?) :
     }
     return this
   }
+
+  fun hasCorrelationId(expected: UUID): TimelineEventResponseAssert {
+    isNotNull
+    with(actual!!) {
+      if (correlationId != expected) {
+        failWithMessage("Expected correlationId to be $expected, but was $correlationId")
+      }
+    }
+    return this
+  }
+
+  fun correlationIdIsNotEqualTo(unexpected: UUID): TimelineEventResponseAssert {
+    isNotNull
+    with(actual!!) {
+      if (correlationId == unexpected) {
+        failWithMessage("Expected correlationId NOT to be $unexpected")
+      }
+    }
+    return this
+  }
 }
